--- a/Texel.csproj
+++ b/Texel.csproj
@@ -50,9 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\IDrawingTool.cs">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Compile>
+    <Compile Include="Classes\IDrawingTool.cs" />
     <Compile Include="Classes\Input\InputHandler.cs" />
     <Compile Include="Classes\MinecraftAssetsService.cs" />
     <Compile Include="Classes\MinecraftPacks.cs" />
@@ -89,6 +87,12 @@
     </Compile>
     <Compile Include="Dialogs\TextInputDialog.Designer.cs">
       <DependentUpon>TextInputDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\TextureBrowserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\TextureBrowserForm.Designer.cs">
+      <DependentUpon>TextureBrowserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\TexturePathDialog.cs">
       <SubType>Form</SubType>
